--- a/example/common/stylus/base.styl
+++ b/example/common/stylus/base.styl
@@ -1,7 +1,7 @@
 //// row line
-$color-row-line = #ebebeb
+$color-row-line = #ccc
 //// column line
-$color-col-line = #f5f5f5
+$color-col-line = #ccc
 
 .clear-fix
   &::after
